<resources>
    <string name="app_name">Vanilla App</string>
    <string name="profile_image">Profile Image</string>
    <string name="home">Home</string>
    <string name="post_ad">Post Ad</string>
    <string name="my_account">My Account</string>
    <string name="my_ads">My Ads</string>
    <string name="my_messages">My Messages</string>
    <string name="settings">Settings</string>
    <string name="close">Close</string>
    <string name="name_surname">Name Surname</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="call_msg">Are you stuck? Call us</string>
    <string name="increment">Increment</string>
    <string name="reset">Reset</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="ringier_logo">Ringier Logo</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="_0">0</string>
    <plurals name="ad_views_count">
        <item quantity="one">%d view</item>
        <item quantity="other">%d views</item>
    </plurals>
    <string name="expected_ad_or_msg_type">An error occurred: set up badge method parameter requires either 1 or 2</string>
</resources>