<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home_24"
            />

        <item
            android:id="@+id/nav_post_ad"
            android:title="@string/post_ad"
            android:icon="@drawable/ic_add_24"
            />

        <item
            android:id="@+id/nav_account"
            android:title="@string/my_account"
            android:icon="@drawable/ic_person_24"
            />

        <item
            android:id="@+id/nav_ads"
            android:title="@string/my_ads"
            android:icon="@drawable/ic_local_offer_24"
            />

        <item
            android:id="@+id/nav_msg"
            android:title="@string/my_messages"
            android:icon="@drawable/ic_message_24"
            />

        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings_24"
            />

    </group>
</menu>