<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/content_padding"
    >

    <ImageButton
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_med"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_close_24"
        android:contentDescription="@string/close"
        android:background="@null"
        />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/close_button"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/profile_image"
        app:srcCompat="@drawable/profile_placeholder"
        />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_med"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:singleLine="true"
        app:layout_constraintTop_toTopOf="@id/profile_image"
        app:layout_constraintStart_toEndOf="@id/profile_image"
        app:layout_constraintEnd_toStartOf="@id/close_button"
        android:text="@string/name_surname"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/margin_med"
        android:layout_marginEnd="@dimen/margin_med"
        />
    <TextView
        android:id="@+id/logout_text"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_marginTop="@dimen/margin_extra_min"
        app:layout_constraintTop_toBottomOf="@id/name_text"
        app:layout_constraintStart_toStartOf="@id/name_text"
        android:singleLine="true"
        android:text="@string/logout"
        app:drawableStartCompat="@drawable/ic_vpn_key_24"
        android:drawablePadding="@dimen/margin_min"
        android:textColor="@color/gray"
        android:gravity="center"
        />

    <ImageButton
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_edit_12"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        app:layout_constraintEnd_toEndOf="@id/profile_image"
        android:contentDescription="@string/edit_profile"
        android:background="@drawable/circle_orange_24"
        />

</androidx.constraintlayout.widget.ConstraintLayout>